# kbsa

./: .gitignore  CMakeLists.txt  README.md
docs/validation/: README.md
docs/validation/scripts/: visualize_validation.py
include/: kbsa_anchor.hpp  kbsa_core.hpp  kbsa_merge.hpp  kbsa_params.hpp  kbsa_rank.hpp  kbsa_unitig.hpp  kbsa_unitig_map.hpp  kbsa_unitig_score.hpp
scripts/: analyze_brapa.sh  kbsa-anchor-gs2.sh  kbsa_count.sh  run_cucumber_csdw3.sh  validate_brapa_gt.sh  validate_gt.py
sim/: make_f2_bulks.py  make_f2_bulks_real.py  run_simulation.sh
src/: kbsa_validate.cpp  main.cpp
tests/: test_unitig_cdbg.cpp  test_unitig_integration.cpp
